--- a/automation/services/mina-bp-stats/leaderboard-ui/performance tracker New.html
+++ b/automation/services/mina-bp-stats/leaderboard-ui/performance tracker New.html
@@ -83,8 +83,8 @@
     <!-- Tab and Search Section End -->
 
     <!-- Data TableSection Start  -->
-    <div class=" container performance-Container pr-0 pl-0 mt-0 mb-5 " id="Data-table ">
-        <div class="table-responsive table-responsive-sm table-responsive-md table-responsive-lg table-responsive-xl">
+    <div class=" container performance-Container pr-0 pl-0 mt-0 mb-5  tab-content">
+        <div class="table-responsive table-responsive-sm table-responsive-md table-responsive-lg table-responsive-xl tab-pane fade show active" id="Data-table" role="tabpanel" aria-labelledby="Data-table">
             <table class="table table-striped text-center ">
                 <thead>
                     <tr class="border-top-0 ">
